fixed overflow in the y axis in movies with bigger descriptions

--- a/style.css
+++ b/style.css
@@ -106,4 +106,5 @@ main {
 
 .movie:hover .overview {
   transform: translateY(0);
+  overflow-y: auto;
 }
